Add Power, Energie and Torque to converter

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -50,6 +50,10 @@
     <string name="converter_type_temperature">Temperatur</string>
     <string name="converter_type_currency">Währung</string>
     <string name="converter_type_speed">Geschwindigkeit</string>
+    <string name="converter_type_power">Leistung</string>
+    <string name="converter_type_energy">Energie</string>
+    <string name="converter_type_torque">Drehmoment</string>
+
 
     <string name="switch_units_description">Wechsel Einheiten</string>
     <string name="navigate_back_description">Zurück Aktion</string>
@@ -57,134 +61,170 @@
     <string name="system_default">System</string>
 
 <!-- Currency Units -->
-    <string name="currency_aed">AED VAE-Dirham</string>
-    <string name="currency_all">AL Albanischer Lek</string>
-    <string name="currency_amd">AM Armenischer Dram</string>
-    <string name="currency_aud">AU Australischer Dollar</string>
-    <string name="currency_azn">AZ Aserbaidschan-Manat</string>
-    <string name="currency_bam">BA Bosnien und Herzegowina Konvertible Mark</string>
-    <string name="currency_bgn">BG Bulgarischer Lew</string>
-    <string name="currency_brl">BR Brasilianischer Real</string>
-    <string name="currency_byn">BY Belarussischer Rubel</string>
-    <string name="currency_cad">CA Kanadischer Dollar</string>
-    <string name="currency_chf">CHF Schweizer Franken</string>
-    <string name="currency_cny">CN Chinesischer Yuan</string>
-    <string name="currency_czk">CZ Tschechische Krone</string>
-    <string name="currency_dkk">DK Dänische Krone</string>
-    <string name="currency_eur">€ Euro</string>
-    <string name="currency_gbp">£ Britisches Pfund</string>
-    <string name="currency_gel">GEL Georgischer Lari</string>
-    <string name="currency_hkd">HK Hongkong-Dollar</string>
-    <string name="currency_huf">HU Ungarischer Forint</string>
-    <string name="currency_inr">₹ Indische Rupie</string>
-    <string name="currency_isk">IS Isländische Krone</string>
-    <string name="currency_jpy">¥ Japanischer Yen</string>
-    <string name="currency_krw">₩ Südkoreanischer Won</string>
-    <string name="currency_mdl">MD Moldauischer Leu</string>
-    <string name="currency_mkd">MK Mazedonischer Denar</string>
-    <string name="currency_mxn">MX Mexikanischer Peso</string>
-    <string name="currency_nok">NO Norwegische Krone</string>
-    <string name="currency_nzd">NZ Neuseeland-Dollar</string>
-    <string name="currency_pln">PL Polnischer Zloty</string>
-    <string name="currency_ron">RO Rumänischer Leu</string>
-    <string name="currency_rsd">RS Serbischer Dinar</string>
-    <string name="currency_rub">RU Russischer Rubel</string>
-    <string name="currency_sek">SEK Schwedische Krone</string>
-    <string name="currency_sgd">SG Singapur-Dollar</string>
-    <string name="currency_try">TR Türkische Lira</string>
-    <string name="currency_uah">UA Ukrainische Hrywnja</string>
-    <string name="currency_usd">$ US-Dollar</string>
-    <string name="currency_zar">ZA Südafrikanischer Rand</string>
+    <string name="currency_aed">د.إ - VAE-Dirham</string>
+    <string name="currency_all">Lek - Albanischer Lek</string>
+    <string name="currency_amd">֏ - Armenischer Dram</string>
+    <string name="currency_aud">$ - Australischer Dollar</string>
+    <string name="currency_azn">₼ - Aserbaidschan-Manat</string>
+    <string name="currency_bam">KM - Bosnien und Herzegowina Konvertible Mark</string>
+    <string name="currency_bgn">лв - Bulgarischer Lew</string>
+    <string name="currency_brl">R$ - Brasilianischer Real</string>
+    <string name="currency_byn">Br - Belarussischer Rubel</string>
+    <string name="currency_cad">$ - Kanadischer Dollar</string>
+    <string name="currency_chf">CHF - Schweizer Franken</string>
+    <string name="currency_cny">¥ - Chinesischer Yuan</string>
+    <string name="currency_czk">Kč - Tschechische Krone</string>
+    <string name="currency_dkk">kr - Dänische Krone</string>
+    <string name="currency_eur">€ - Euro</string>
+    <string name="currency_gbp">£ - Britisches Pfund</string>
+    <string name="currency_gel">₾ - Georgischer Lari</string>
+    <string name="currency_hkd">$ - Hongkong-Dollar</string>
+    <string name="currency_huf">Ft - Ungarischer Forint</string>
+    <string name="currency_inr">₹ - Indische Rupie</string>
+    <string name="currency_isk">kr - Isländische Krone</string>
+    <string name="currency_jpy">¥ - Japanischer Yen</string>
+    <string name="currency_krw">₩ - Südkoreanischer Won</string>
+    <string name="currency_mdl">L - Moldauischer Leu</string>
+    <string name="currency_mkd">ден - Mazedonischer Denar</string>
+    <string name="currency_mxn">$ - Mexikanischer Peso</string>
+    <string name="currency_nok">kr - Norwegische Krone</string>
+    <string name="currency_nzd">$ - Neuseeland-Dollar</string>
+    <string name="currency_pln">zł - Polnischer Zloty</string>
+    <string name="currency_ron">lei - Rumänischer Leu</string>
+    <string name="currency_rsd">дин - Serbischer Dinar</string>
+    <string name="currency_rub">₽ - Russischer Rubel</string>
+    <string name="currency_sek">kr - Schwedische Krone</string>
+    <string name="currency_sgd">$ - Singapur-Dollar</string>
+    <string name="currency_try">₺ - Türkische Lira</string>
+    <string name="currency_uah">₴ - Ukrainische Hrywnja</string>
+    <string name="currency_usd">$ - US-Dollar</string>
+    <string name="currency_zar">R - Südafrikanischer Rand</string>
 
     <!-- Area Units -->
-    <string name="area_square_kilometers">Quadratkilometer</string>
-    <string name="area_square_decameters">Quadratdekameter</string>
-    <string name="area_square_meters">Quadratmeter</string>
-    <string name="area_square_decimeters">Quadratdezimeter</string>
-    <string name="area_square_centimeters">Quadratzentimeter</string>
-    <string name="area_square_millimeters">Quadratmillimeter</string>
-    <string name="area_square_micrometers">Quadratmikrometer</string>
-    <string name="area_square_nanometers">Quadratnanometer</string>
-    <string name="area_square_miles">Quadratmeilen</string>
-    <string name="area_square_yards">Quadratyards</string>
-    <string name="area_square_feet">Quadratfuß</string>
-    <string name="area_square_inches">Quadratzoll</string>
-    <string name="area_hectares">Hektar</string>
-    <string name="area_acres">Morgen</string> <!-- Acres can also be "Acker" -->
-    <string name="area_ar">Ar</string>
+    <!-- Area Units -->
+    <string name="area_square_kilometers">km² - Quadratkilometer</string>
+    <string name="area_square_decameters">dam² - Quadratdekameter</string>
+    <string name="area_square_meters">m² - Quadratmeter</string>
+    <string name="area_square_decimeters">dm² - Quadratdezimeter</string>
+    <string name="area_square_centimeters">cm² - Quadratzentimeter</string>
+    <string name="area_square_millimeters">mm² - Quadratmillimeter</string>
+    <string name="area_square_micrometers">µm² - Quadratmikrometer</string>
+    <string name="area_square_nanometers">nm² - Quadratnanometer</string>
+    <string name="area_square_miles">mi² - Quadratmeilen</string>
+    <string name="area_square_yards">yd² - Quadratyards</string>
+    <string name="area_square_feet">ft² - Quadratfuß</string>
+    <string name="area_square_inches">in² - Quadratzoll</string>
+    <string name="area_hectares">ha - Hektar</string>
+    <string name="area_acres">ac - Morgen</string>
+    <string name="area_ar">a - Ar</string>
 
     <!-- Length Units -->
-    <string name="length_nanometers">Nanometer</string>
-    <string name="length_micrometers">Mikrometer</string>
-    <string name="length_millimeters">Millimeter</string>
-    <string name="length_centimeters">Zentimeter</string>
-    <string name="length_decimeters">Dezimeter</string>
-    <string name="length_meters">Meter</string>
-    <string name="length_decameters">Dekameter</string>
-    <string name="length_hectometers">Hektometer</string>
-    <string name="length_kilometers">Kilometer</string>
-    <string name="length_inches">Zoll</string>
-    <string name="length_feet">Fuß</string>
-    <string name="length_yards">Yards</string>
-    <string name="length_miles">Meilen</string>
-    <string name="length_seamiles">Seemeilen</string>
-    <string name="length_nautical_miles">Nautische Meilen</string>
-    <string name="length_light_years">Lichtjahre</string>
-    <string name="length_parsecs">Parsec</string>
+    <string name="length_nanometers">nm - Nanometer</string>
+    <string name="length_micrometers">µm - Mikrometer</string>
+    <string name="length_millimeters">mm - Millimeter</string>
+    <string name="length_centimeters">cm - Zentimeter</string>
+    <string name="length_decimeters">dm - Dezimeter</string>
+    <string name="length_meters">m - Meter</string>
+    <string name="length_decameters">dam - Dekameter</string>
+    <string name="length_hectometers">hm - Hektometer</string>
+    <string name="length_kilometers">km - Kilometer</string>
+    <string name="length_inches">in - Zoll</string>
+    <string name="length_feet">ft - Fuß</string>
+    <string name="length_yards">yd - Yards</string>
+    <string name="length_miles">mi - Meilen</string>
+    <string name="length_seamiles">nmi - Seemeilen</string>
+    <string name="length_nautical_miles">nmi - Nautische Meilen</string>
+    <string name="length_light_years">ly - Lichtjahre</string>
+    <string name="length_parsecs">pc - Parsec</string>
 
     <!-- Volume Units -->
-    <string name="volume_milliliters">Milliliter</string>
-    <string name="volume_liters">Liter</string>
-    <string name="volume_cubic_meters">Kubikmeter</string>
-    <string name="volume_cubic_decimeters">Kubikdezimeter</string>
-    <string name="volume_cubic_centimeters">Kubikzentimeter</string>
-    <string name="volume_cubic_millimeters">Kubikmillimeter</string>
-    <string name="volume_cubic_inches">Kubikzoll</string>
-    <string name="volume_cubic_feet">Kubikfuß</string>
-    <string name="volume_gallons_us">US-Gallonen</string>
-    <string name="volume_gallons_uk">UK-Gallonen</string>
-    <string name="volume_quart_us">US-Quart</string>
-    <string name="volume_quart_uk">UK-Quarts</string>
-    <string name="volume_teaspoon_us">US-Teelöffel</string>
-    <string name="volume_teaspoon_uk">UK-Teelöffel</string>
-    <string name="volume_tablespoon_us">US-Esslöffel</string>
-    <string name="volume_tablespoon_uk">UK-Esslöffel</string>
-    <string name="volume_pints_us">US-Pints</string>
-    <string name="volume_pints_uk">UK-Pints</string>
-    <string name="volume_cup_us">US-Tassen</string>
-    <string name="volume_cup_uk">UK-Tassen</string>
-    <string name="volume_fluid_ounce_us">US-Flüssigunzen</string>
-    <string name="volume_fluid_ounce_uk">UK-Flüssigunzen</string>
+    <string name="volume_milliliters">ml - Milliliter</string>
+    <string name="volume_liters">l - Liter</string>
+    <string name="volume_cubic_meters">m³ - Kubikmeter</string>
+    <string name="volume_cubic_decimeters">dm³ - Kubikdezimeter</string>
+    <string name="volume_cubic_centimeters">cm³ - Kubikzentimeter</string>
+    <string name="volume_cubic_millimeters">mm³ - Kubikmillimeter</string>
+    <string name="volume_cubic_inches">in³ - Kubikzoll</string>
+    <string name="volume_cubic_feet">ft³ - Kubikfuß</string>
+    <string name="volume_gallons_us">gal (US) - US-Gallonen</string>
+    <string name="volume_gallons_uk">gal (UK) - UK-Gallonen</string>
+    <string name="volume_quart_us">qt (US) - US-Quart</string>
+    <string name="volume_quart_uk">qt (UK) - UK-Quarts</string>
+    <string name="volume_teaspoon_us">tsp (US) - US-Teelöffel</string>
+    <string name="volume_teaspoon_uk">tsp (UK) - UK-Teelöffel</string>
+    <string name="volume_tablespoon_us">tbsp (US) - US-Esslöffel</string>
+    <string name="volume_tablespoon_uk">tbsp (UK) - UK-Esslöffel</string>
+    <string name="volume_pints_us">pt (US) - US-Pints</string>
+    <string name="volume_pints_uk">pt (UK) - UK-Pints</string>
+    <string name="volume_cup_us">cup (US) - US-Tassen</string>
+    <string name="volume_cup_uk">cup (UK) - UK-Tassen</string>
+    <string name="volume_fluid_ounce_us">fl oz (US) - US-Flüssigunzen</string>
+    <string name="volume_fluid_ounce_uk">fl oz (UK) - UK-Flüssigunzen</string>
 
     <!-- Weight Units -->
-    <string name="weight_metric_tonnes">Metrische Tonnen</string>
-    <string name="weight_kilograms">Kilogramm</string>
-    <string name="weight_grams">Gramm</string>
-    <string name="weight_milligrams">Milligramm</string>
-    <string name="weight_micrograms">Mikrogramm</string>
-    <string name="weight_nanograms">Nanogramm</string>
-    <string name="weight_imperial_tons">Imperial Tons (UK)</string>
-    <string name="weight_us_tons">US-Tonnen</string>
-    <string name="weight_pounds">Pfund</string>
-    <string name="weight_ounces">Unzen</string>
-    <string name="weight_grain">Korn</string>
-    <string name="weight_carats">Karat</string>
-    <string name="weight_stones">Stone</string>
+    <string name="weight_metric_tonnes">t - Metrische Tonnen</string>
+    <string name="weight_kilograms">kg - Kilogramm</string>
+    <string name="weight_grams">g - Gramm</string>
+    <string name="weight_milligrams">mg - Milligramm</string>
+    <string name="weight_micrograms">µg - Mikrogramm</string>
+    <string name="weight_nanograms">ng - Nanogramm</string>
+    <string name="weight_imperial_tons">t (UK) - Imperial Tons (UK)</string>
+    <string name="weight_us_tons">t (US) - US-Tonnen</string>
+    <string name="weight_pounds">lb - Pfund</string>
+    <string name="weight_ounces">oz - Unzen</string>
+    <string name="weight_grain">gr - Korn</string>
+    <string name="weight_carats">ct - Karat</string>
+    <string name="weight_stones">st - Stone</string>
 
     <!-- Speed Units -->
-    <string name="speed_meters_per_second">Meter/Sekunde</string>
-    <string name="speed_kilometers_per_hour">Kilometer/Stunde</string>
-    <string name="speed_miles_per_hour">Meilen/Stunde</string>
-    <string name="speed_feet_per_second">Fuß/Sekunde</string>
-    <string name="speed_knots">Knoten</string>
-    <string name="speed_mach">Mach</string>
-    <string name="speed_meters_per_minute">Meter/Minute</string>
-    <string name="speed_meters_per_hour">Meter/Stunde</string>
-    <string name="speed_kilometers_per_second">Kilometer/Sekunde</string>
-    <string name="speed_kilometers_per_minute">Kilometer/Minute</string>
-    <string name="speed_inches_per_second">Zoll/Sekunde</string>
-    <string name="speed_yards_per_hour">Yards/Stunde</string>
-    <string name="speed_light_speed">Lichtgeschwindigkeit (m/s)</string>
+    <string name="speed_meters_per_second">m/s - Meter/Sekunde</string>
+    <string name="speed_kilometers_per_hour">km/h - Kilometer/Stunde</string>
+    <string name="speed_miles_per_hour">mph - Meilen/Stunde</string>
+    <string name="speed_feet_per_second">ft/s - Fuß/Sekunde</string>
+    <string name="speed_knots">kn - Knoten</string>
+    <string name="speed_mach">M - Mach</string>
+    <string name="speed_meters_per_minute">m/min - Meter/Minute</string>
+    <string name="speed_meters_per_hour">m/h - Meter/Stunde</string>
+    <string name="speed_kilometers_per_second">km/s - Kilometer/Sekunde</string>
+    <string name="speed_kilometers_per_minute">km/min - Kilometer/Minute</string>
+    <string name="speed_inches_per_second">in/s - Zoll/Sekunde</string>
+    <string name="speed_yards_per_hour">yd/h - Yards/Stunde</string>
+    <string name="speed_light_speed">c - Lichtgeschwindigkeit (m/s)</string>
+
+    <!--Power Units -->
+    <string name="power_milliwatts">mW - Milliwatt</string>
+    <string name="power_watts">W - Watt</string>
+    <string name="power_kilowatts">kW - Kilowatt</string>
+    <string name="power_megawatts">MW - Megawatt</string>
+    <string name="power_gigawatts">GW - Gigawatt</string>
+    <string name="power_horsepower_mechanical">hp - Pferdestärken (imperial)</string>
+    <string name="power_horsepower_metric">PS - Pferdestärken (metrisch)</string>
+    <string name="power_btu_per_hour">BTU/h - BTU pro Stunde</string>
+    <string name="power_tons_of_refrigeration">TR - Kältetonnen</string>
+    <string name="power_calories_per_second">cal/s - Kalorien pro Sekunde</string>
+    <string name="power_foot_pounds_per_second">ft·lbf/s - Fuß-Pfund pro Sekunde</string>
+
+    <!-- Energy Units -->
+    <string name="energy_electronvolts">eV - Elektronenvolt</string>
+    <string name="energy_joules">J - Joule</string>
+    <string name="energy_kilojoules">kJ - Kilojoule</string>
+    <string name="energy_megajoules">MJ - Megajoule</string>
+    <string name="energy_gigajoules">GJ - Gigajoule</string>
+    <string name="energy_calories">cal - Kalorien</string>
+    <string name="energy_kilocalories">kcal - Kilokalorien</string>
+    <string name="energy_watthours">Wh - Wattstunden</string>
+    <string name="energy_kilowatthours">kWh - Kilowattstunden</string>
+    <string name="energy_btu">BTU - Britische thermische Einheiten</string>
+    <string name="energy_foot_pounds">ft·lbf - Fuß-Pfund</string>
+
+    <!-- Torque Units -->
+    <string name="torque_millinewton_meters">mNm - Millinewtonmeter</string>
+    <string name="torque_newton_centimeters">Ncm - Newtonzentimeter</string>
+    <string name="torque_newton_meters">Nm - Newtonmeter</string>
+    <string name="torque_kilonewton_meters">kNm - Kilonewtonmeter</string>
+    <string name="torque_inch_pounds">in/lbf - Zoll-Pfund</string>
+    <string name="torque_foot_pounds">ft/lbf - Fuß-Pfund</string>
+    <string name="torque_kgf_meters">kgf/m - Kilogrammkraftmeter</string>
 
     <string name="developer_options_title">Developer Options</string>
     <string name="dev_settings_description">Enable Alpha and Beta State Features</string>
