--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,11 @@
     <string name="converter_type_temperature">Temperature</string>
     <string name="converter_type_currency">Currency</string>
     <string name="converter_type_speed">Speed</string>
+    <string name="converter_type_power">Power</string>
+    <string name="converter_type_energy">Energy</string>
+    <string name="converter_type_torque">Torque</string>
+
+
 
     <string name="switch_units_description">Switch Units</string>
     <string name="navigate_back_description">Back Action</string>
@@ -54,136 +59,171 @@
     <string name="system_default">System</string>
 
 <!-- Currency Units -->
-    <string name="currency_aed">AED United Arab Emirates Dirham</string>
-    <string name="currency_all">AL Albanian Lek</string>
-    <string name="currency_amd">AM Armenian Dram</string>
-    <string name="currency_aud">AU Australian Dollar</string>
-    <string name="currency_azn">AZ Azerbaijani Manat</string>
-    <string name="currency_bam">BA Bosnia-Herzegovina Convertible Mark</string>
-    <string name="currency_bgn">BG Bulgarian Lev</string>
-    <string name="currency_brl">BR Brazilian Real</string>
-    <string name="currency_byn">BY Belarusian Ruble</string>
-    <string name="currency_cad">CA Canadian Dollar</string>
-    <string name="currency_chf">CHF Swiss Franc</string>
-    <string name="currency_cny">CN Chinese Yuan</string>
-    <string name="currency_czk">CZ Czech Koruna</string>
-    <string name="currency_dkk">DK Danish Krone</string>
-    <string name="currency_eur">€ Euro</string>
-    <string name="currency_gbp">£ British Pound</string>
-    <string name="currency_gel">GEL Georgian Lari</string>
-    <string name="currency_hkd">HK Hong Kong Dollar</string>
-    <string name="currency_huf">HU Hungarian Forint</string>
-    <string name="currency_inr">₹ Indian Rupee</string>
-    <string name="currency_isk">IS Icelandic Krona</string>
-    <string name="currency_jpy">¥ Japanese Yen</string>
-    <string name="currency_krw">₩ South Korean Won</string>
-    <string name="currency_mdl">MD Moldovan Leu</string>
-    <string name="currency_mkd">MK Macedonian Denar</string>
-    <string name="currency_mxn">MX Mexican Peso</string>
-    <string name="currency_nok">NO Norwegian Krone</string>
-    <string name="currency_nzd">NZ New Zealand Dollar</string>
-    <string name="currency_pln">PL Polish Zloty</string>
-    <string name="currency_ron">RO Romanian Leu</string>
-    <string name="currency_rsd">RS Serbian Dinar</string>
-    <string name="currency_rub">RU Russian Ruble</string>
-    <string name="currency_sek">SEK Swedish Krona</string>
-    <string name="currency_sgd">SG Singapore Dollar</string>
-    <string name="currency_try">TR Turkish Lira</string>
-    <string name="currency_uah">UA Ukrainian Hryvnia</string>
-    <string name="currency_usd">$ US Dollar</string>
-    <string name="currency_zar">ZA South African Rand</string>
+    <string name="currency_aed">د.إ - United Arab Emirates Dirham</string>
+    <string name="currency_all">Lek - Albanian Lek</string>
+    <string name="currency_amd">֏ - Armenian Dram</string>
+    <string name="currency_aud">$ - Australian Dollar</string>
+    <string name="currency_azn">₼ - Azerbaijani Manat</string>
+    <string name="currency_bam">KM - Bosnia-Herzegovina Convertible Mark</string>
+    <string name="currency_bgn">лв - Bulgarian Lev</string>
+    <string name="currency_brl">R$ - Brazilian Real</string>
+    <string name="currency_byn">Br - Belarusian Ruble</string>
+    <string name="currency_cad">$ - Canadian Dollar</string>
+    <string name="currency_chf">CHF - Swiss Franc</string>
+    <string name="currency_cny">¥ - Chinese Yuan</string>
+    <string name="currency_czk">Kč - Czech Koruna</string>
+    <string name="currency_dkk">kr - Danish Krone</string>
+    <string name="currency_eur">€ - Euro</string>
+    <string name="currency_gbp">£ - British Pound</string>
+    <string name="currency_gel">₾ - Georgian Lari</string>
+    <string name="currency_hkd">$ - Hong Kong Dollar</string>
+    <string name="currency_huf">Ft - Hungarian Forint</string>
+    <string name="currency_inr">₹ - Indian Rupee</string>
+    <string name="currency_isk">kr - Icelandic Krona</string>
+    <string name="currency_jpy">¥ - Japanese Yen</string>
+    <string name="currency_krw">₩ - South Korean Won</string>
+    <string name="currency_mdl">L - Moldovan Leu</string>
+    <string name="currency_mkd">ден - Macedonian Denar</string>
+    <string name="currency_mxn">$ - Mexican Peso</string>
+    <string name="currency_nok">kr - Norwegian Krone</string>
+    <string name="currency_nzd">$ - New Zealand Dollar</string>
+    <string name="currency_pln">zł - Polish Zloty</string>
+    <string name="currency_ron">lei - Romanian Leu</string>
+    <string name="currency_rsd">дин - Serbian Dinar</string>
+    <string name="currency_rub">₽ - Russian Ruble</string>
+    <string name="currency_sek">kr - Swedish Krona</string>
+    <string name="currency_sgd">$ - Singapore Dollar</string>
+    <string name="currency_try">₺ - Turkish Lira</string>
+    <string name="currency_uah">₴ - Ukrainian Hryvnia</string>
+    <string name="currency_usd">$ - US Dollar</string>
+    <string name="currency_zar">R - South African Rand</string>
 
     <!-- Area Units -->
-    <string name="area_square_kilometers">Square Kilometers</string>
-    <string name="area_square_decameters">Square Decameters</string>
-    <string name="area_square_meters">Square Meters</string>
-    <string name="area_square_decimeters">Square Decimeters</string>
-    <string name="area_square_centimeters">Square Centimeters</string>
-    <string name="area_square_millimeters">Square Millimeters</string>
-    <string name="area_square_micrometers">Square Micrometers</string>
-    <string name="area_square_nanometers">Square Nanometers</string>
-    <string name="area_square_miles">Square Miles</string>
-    <string name="area_square_yards">Square Yards</string>
-    <string name="area_square_feet">Square Feet</string>
-    <string name="area_square_inches">Square Inches</string>
-    <string name="area_hectares">Hectares</string>
-    <string name="area_acres">Acres</string>
-    <string name="area_ar">Ar</string>
+    <string name="area_square_kilometers">km² - Square Kilometers</string>
+    <string name="area_square_decameters">dam² - Square Decameters</string>
+    <string name="area_square_meters">m² - Square Meters</string>
+    <string name="area_square_decimeters">dm² - Square Decimeters</string>
+    <string name="area_square_centimeters">cm² - Square Centimeters</string>
+    <string name="area_square_millimeters">mm² - Square Millimeters</string>
+    <string name="area_square_micrometers">µm² - Square Micrometers</string>
+    <string name="area_square_nanometers">nm² - Square Nanometers</string>
+    <string name="area_square_miles">mi² - Square Miles</string>
+    <string name="area_square_yards">yd² - Square Yards</string>
+    <string name="area_square_feet">ft² - Square Feet</string>
+    <string name="area_square_inches">in² - Square Inches</string>
+    <string name="area_hectares">ha - Hectares</string>
+    <string name="area_acres">ac - Acres</string>
+    <string name="area_ar">a - Ar</string>
 
     <!-- Length Units -->
-    <string name="length_nanometers">Nanometers</string>
-    <string name="length_micrometers">Micrometers</string>
-    <string name="length_millimeters">Millimeters</string>
-    <string name="length_centimeters">Centimeters</string>
-    <string name="length_decimeters">Decimeters</string>
-    <string name="length_meters">Meters</string>
-    <string name="length_decameters">Decameters</string>
-    <string name="length_hectometers">Hectometers</string>
-    <string name="length_kilometers">Kilometers</string>
-    <string name="length_inches">Inches</string>
-    <string name="length_feet">Feet</string>
-    <string name="length_yards">Yards</string>
-    <string name="length_miles">Miles</string>
-    <string name="length_seamiles">Sea Miles</string>
-    <string name="length_nautical_miles">Nautical Miles</string>
-    <string name="length_light_years">Light Years</string>
-    <string name="length_parsecs">Parsecs</string>
+    <string name="length_nanometers">nm - Nanometers</string>
+    <string name="length_micrometers">µm - Micrometers</string>
+    <string name="length_millimeters">mm - Millimeters</string>
+    <string name="length_centimeters">cm - Centimeters</string>
+    <string name="length_decimeters">dm - Decimeters</string>
+    <string name="length_meters">m - Meters</string>
+    <string name="length_decameters">dam - Decameters</string>
+    <string name="length_hectometers">hm - Hectometers</string>
+    <string name="length_kilometers">km - Kilometers</string>
+    <string name="length_inches">in - Inches</string>
+    <string name="length_feet">ft - Feet</string>
+    <string name="length_yards">yd - Yards</string>
+    <string name="length_miles">mi - Miles</string>
+    <string name="length_seamiles">nmi - Sea Miles</string>
+    <string name="length_nautical_miles">nmi - Nautical Miles</string>
+    <string name="length_light_years">ly - Light Years</string>
+    <string name="length_parsecs">pc - Parsecs</string>
 
     <!-- Volume Units -->
-    <string name="volume_milliliters">Milliliters</string>
-    <string name="volume_liters">Liters</string>
-    <string name="volume_cubic_meters">Cubic Meters</string>
-    <string name="volume_cubic_decimeters">Cubic Decimeters</string>
-    <string name="volume_cubic_centimeters">Cubic Centimeters</string>
-    <string name="volume_cubic_millimeters">Cubic Millimeters</string>
-    <string name="volume_cubic_inches">Cubic Inches</string>
-    <string name="volume_cubic_feet">Cubic Feet</string>
-    <string name="volume_gallons_us">US Gallons</string>
-    <string name="volume_gallons_uk">UK Gallons</string>
-    <string name="volume_quart_us">US Quart</string>
-    <string name="volume_quart_uk">UK Quarts</string>
-    <string name="volume_teaspoon_us">US Teaspoon</string>
-    <string name="volume_teaspoon_uk">UK Teaspoon</string>
-    <string name="volume_tablespoon_us">US Tablespoon</string>
-    <string name="volume_tablespoon_uk">UK Tablespoon</string>
-    <string name="volume_pints_us">US Pints</string>
-    <string name="volume_pints_uk">UK Pints</string>
-    <string name="volume_cup_us">US Cups</string>
-    <string name="volume_cup_uk">UK Cups</string>
-    <string name="volume_fluid_ounce_us">US Fluid Ounces</string>
-    <string name="volume_fluid_ounce_uk">UK Fluid Ounces</string>
+    <string name="volume_milliliters">ml - Milliliters</string>
+    <string name="volume_liters">l - Liters</string>
+    <string name="volume_cubic_meters">m³ - Cubic Meters</string>
+    <string name="volume_cubic_decimeters">dm³ - Cubic Decimeters</string>
+    <string name="volume_cubic_centimeters">cm³ - Cubic Centimeters</string>
+    <string name="volume_cubic_millimeters">mm³ - Cubic Millimeters</string>
+    <string name="volume_cubic_inches">in³ - Cubic Inches</string>
+    <string name="volume_cubic_feet">ft³ - Cubic Feet</string>
+    <string name="volume_gallons_us">gal (US) - US Gallons</string>
+    <string name="volume_gallons_uk">gal (UK) - UK Gallons</string>
+    <string name="volume_quart_us">qt (US) - US Quart</string>
+    <string name="volume_quart_uk">qt (UK) - UK Quarts</string>
+    <string name="volume_teaspoon_us">tsp (US) - US Teaspoon</string>
+    <string name="volume_teaspoon_uk">tsp (UK) - UK Teaspoon</string>
+    <string name="volume_tablespoon_us">tbsp (US) - US Tablespoon</string>
+    <string name="volume_tablespoon_uk">tbsp (UK) - UK Tablespoon</string>
+    <string name="volume_pints_us">pt (US) - US Pints</string>
+    <string name="volume_pints_uk">pt (UK) - UK Pints</string>
+    <string name="volume_cup_us">cup (US) - US Cups</string>
+    <string name="volume_cup_uk">cup (UK) - UK Cups</string>
+    <string name="volume_fluid_ounce_us">fl oz (US) - US Fluid Ounces</string>
+    <string name="volume_fluid_ounce_uk">fl oz (UK) - UK Fluid Ounces</string>
 
     <!-- Weight Units -->
-    <string name="weight_metric_tonnes">Metric Tonnes</string>
-    <string name="weight_kilograms">Kilograms</string>
-    <string name="weight_grams">Grams</string>
-    <string name="weight_milligrams">Milligrams</string>
-    <string name="weight_micrograms">Micrograms</string>
-    <string name="weight_nanograms">Nanograms</string>
-    <string name="weight_imperial_tons">Imperial Tons (UK)</string>
-    <string name="weight_us_tons">US Tons</string>
-    <string name="weight_pounds">Pounds</string>
-    <string name="weight_ounces">Ounces</string>
-    <string name="weight_grain">Grain</string>
-    <string name="weight_carats">Carats</string>
-    <string name="weight_stones">Stones</string>
+    <string name="weight_metric_tonnes">t - Metric Tonnes</string>
+    <string name="weight_kilograms">kg - Kilograms</string>
+    <string name="weight_grams">g - Grams</string>
+    <string name="weight_milligrams">mg - Milligrams</string>
+    <string name="weight_micrograms">µg - Micrograms</string>
+    <string name="weight_nanograms">ng - Nanograms</string>
+    <string name="weight_imperial_tons">t (UK) - Imperial Tons (UK)</string>
+    <string name="weight_us_tons">t (US) - US Tons</string>
+    <string name="weight_pounds">lb - Pounds</string>
+    <string name="weight_ounces">oz - Ounces</string>
+    <string name="weight_grain">gr - Grain</string>
+    <string name="weight_carats">ct - Carats</string>
+    <string name="weight_stones">st - Stones</string>
 
     <!-- Speed Units -->
-    <string name="speed_meters_per_second">Meters/second</string>
-    <string name="speed_kilometers_per_hour">Kilometers/hour</string>
-    <string name="speed_miles_per_hour">Miles/hour</string>
-    <string name="speed_feet_per_second">Feet/second</string>
-    <string name="speed_knots">Knots</string>
-    <string name="speed_mach">Mach</string>
-    <string name="speed_meters_per_minute">meters/minute</string>
-    <string name="speed_meters_per_hour">meters/hour</string>
-    <string name="speed_kilometers_per_second">kilometers/second</string>
-    <string name="speed_kilometers_per_minute">kilometers/minute</string>
-    <string name="speed_inches_per_second">inches/second</string>
-    <string name="speed_yards_per_hour">yards/hour</string>
-    <string name="speed_light_speed">light speed(m/s)</string>
-    <string name="open_navigation_menu">Open navigation menu\n</string>
+    <string name="speed_meters_per_second">m/s - Meters/second</string>
+    <string name="speed_kilometers_per_hour">km/h - Kilometers/hour</string>
+    <string name="speed_miles_per_hour">mph - Miles/hour</string>
+    <string name="speed_feet_per_second">ft/s - Feet/second</string>
+    <string name="speed_knots">kn - Knots</string>
+    <string name="speed_mach">M - Mach</string>
+    <string name="speed_meters_per_minute">m/min - meters/minute</string>
+    <string name="speed_meters_per_hour">m/h - meters/hour</string>
+    <string name="speed_kilometers_per_second">km/s - kilometers/second</string>
+    <string name="speed_kilometers_per_minute">km/min - kilometers/minute</string>
+    <string name="speed_inches_per_second">in/s - inches/second</string>
+    <string name="speed_yards_per_hour">yd/h - yards/hour</string>
+    <string name="speed_light_speed">c - light speed(m/s)</string>
 
+    <!--Power Units -->
+    <string name="power_milliwatts">mW - Milliwatts</string>
+    <string name="power_watts">W - Watts</string>
+    <string name="power_kilowatts">kW - Kilowatts</string>
+    <string name="power_megawatts">MW - Megawatts</string>
+    <string name="power_gigawatts">GW - Gigawatts</string>
+    <string name="power_horsepower_mechanical">hp - Horsepower (mechanical)</string>
+    <string name="power_horsepower_metric">PS - Horsepower (metric)</string>
+    <string name="power_btu_per_hour">BTU/h - BTU per hour</string>
+    <string name="power_tons_of_refrigeration">TR - Tons of refrigeration</string>
+    <string name="power_calories_per_second">cal/s - Calories per second</string>
+    <string name="power_foot_pounds_per_second">ft·lbf/s - Foot-pounds per second</string>
+
+    <!-- Energy Units -->
+    <string name="energy_electronvolts">eV - Electronvolts</string>
+    <string name="energy_joules">J - Joules</string>
+    <string name="energy_kilojoules">kJ - Kilojoules</string>
+    <string name="energy_megajoules">MJ - Megajoules</string>
+    <string name="energy_gigajoules">GJ - Gigajoules</string>
+    <string name="energy_calories">cal - Calories</string>
+    <string name="energy_kilocalories">kcal - Kilocalories</string>
+    <string name="energy_watthours">Wh - Watt-hours</string>
+    <string name="energy_kilowatthours">kWh - Kilowatt-hours</string>
+    <string name="energy_btu">BTU - British thermal units</string>
+    <string name="energy_foot_pounds">ft·lbf - Foot-pounds</string>
+
+    <!-- Torque Units -->
+    <string name="torque_millinewton_meters">mNm - Millinewton meters</string>
+    <string name="torque_newton_centimeters">Ncm - Newton centimeters</string>
+    <string name="torque_newton_meters">Nm - Newton meters</string>
+    <string name="torque_kilonewton_meters">kNm - Kilonewton meters</string>
+    <string name="torque_inch_pounds">in/lbf - Inch-pounds</string>
+    <string name="torque_foot_pounds">ft/lbf - Foot-pounds</string>
+    <string name="torque_kgf_meters">kgf/m - Kilogram-force meters</string>
+
+    <string name="open_navigation_menu">Open navigation menu\n</string>
     <string name="developer_options_title">Developer Options</string>
     <string name="dev_settings_description">Enable Alpha and Beta State Features</string>
     <string name="developer_options">Developer Settings</string>
